@@ -25,3 +25,6 @@ $TTL 300
 @			NS	ns.tld.
 ns			A	10.53.0.4
 fetch  10              TXT     A short ttl
+fetchall  10              TXT     A short ttl
+fetchall  10              A     1.2.3.4
+fetchall  10              AAAA    ::1
